[package]
name = "image-api-server"
version = "0.1.0"
authors = ["Robin Kehr <ich@robinkehr.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "1.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
futures = "0.3.9"
bytes = "1.0.0"
smallvec = "1.6.1"